# aave-starknet-bridge

./: .env.sample  .gitignore  .gitmodules  .pre-commit-config.yaml  .prettierignore  Dockerfile  LICENSE.md  Makefile  README.md  ]  docker-compose.yml  hardhat.config.ts  package-lock.json  package.json  pyproject.toml  requirements.txt  verifier.py
.env/: public
.github/workflows/: bridge-activation.yml  certora.yml  certoraConstIndex.yml  ci.yml  code-check.yml  deploy.yml  e2e-tests.yml
.husky/: pre-commit
certora/: .gitignore  README.md  applyHarness.patch
certora/harness/: ATokenWithPool.sol  ATokenWithPoolA_L1.sol  ATokenWithPoolB_L1.sol  ATokenWithPoolImpl.sol  BridgeHarness.sol  BridgeL2Harness.sol  (+15 more)
constants/: addresses.ts  allowlistedTokens.ts
helpers/: rayMath.ts
scripts/: addresses.ts  allowlistedTokens.ts  deploy.ts  deployBridge.ts  deployETHStaticAToken.ts  deployL1GovPayload.ts  deployTokens.ts  deployUpdatedL1Bridge.ts  static_analysis_cairo.py  static_analysis_cairo.sh  static_analysis_solidity.sh  whitelistedTokens.ts
test/: ETHStaticAToken.test.ts  bridge.test.ts  bridge_activation.test.ts  bridge_activation_on_forked_mainnet.test.ts  constants.ts  deposit_cancellation.test.ts  deposit_ceiling.test.ts  governance-relay.test.ts  governance-simple.test.ts  helpers.ts  postman.test.ts  proxy.test.ts  rayMath.ts  rewards-comparison.test.ts  starkgate.test.ts  static_a_token.test.ts  staticatokenlm.test.ts  tokenbridge.test.ts  utils.ts  wad_ray_math.test.ts  wadraymath.ts
vulnerabilities/: results_cairo.sarif  results_solidity.sarif
(+124 files in other folders)
